# cid-router

./: .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  flake.nix  rustfmt.toml
.github/workflows/: docker-dev.yaml  main.yaml
.readme/: update.sh
cid-router/: Cargo.toml  README.md  config.example.toml
cid-router-server/: config.localstorage.toml
cid-router-server/src/: api.rs  auth.rs
cid-router/src/: api.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs
cid-router/src/api/: v1.rs
cid-router/src/api/v1/: providers.rs  routes.rs
cid-router/src/crp/: external.rs  ipfs.rs  iroh.rs  mod.rs
core/: Cargo.toml  README.md
core/src/: auth.rs  cid.rs  cid_filter.rs  context.rs  crp.rs  db.rs  indexer.rs  lib.rs  repo.rs  routes.rs
crates/api-utils/: Cargo.toml  README.md
crates/api-utils/src/: error.rs  lib.rs  result.rs
crates/cid-filter/: Cargo.toml  README.md
crates/cid-filter/src/: lib.rs  table.rs
crates/routes/: Cargo.toml  README.md
crates/routes/src/: lib.rs
crps/: README.md
crps/azure/: Cargo.toml  README.md
crps/azure/src/: config.rs  container.rs  index.rs  lib.rs  provider.rs
crps/iroh/: Cargo.toml  README.md
crps/iroh/src/: iroh.rs  lib.rs
external-crps/azure-blob-storage-crp/: Cargo.toml  README.md  config.example.toml
external-crps/azure-blob-storage-crp/src/: api.rs  cli.rs  config.rs  context.rs  db.rs  lib.rs  log.rs  main.rs
external-crps/azure-blob-storage-crp/src/api/v1/crp/: filter.rs  routes.rs
external-crps/azure-blob-storage-crp/src/api/v1/db/tables/: blob_index.rs  collection_index.rs  hash_index.rs  hash_index_detailed.rs  mod.rs
external-crps/azure-blob-storage-crp/src/indexers/: blob_indexer.rs  mod.rs
external-crps/github-crp/: Cargo.toml  README.md  config.example.toml
external-crps/github-crp/src/: api.rs  cli.rs  config.rs  context.rs  db.rs  log.rs  main.rs
external-crps/github-crp/src/api/: v1.rs
external-crps/github-crp/src/api/v1/crp/: filter.rs  mod.rs  routes.rs
external-crps/github-crp/src/api/v1/db/tables/: cid_lookup_table.rs  commit_table.rs  mod.rs
external-crps/github-crp/src/indexers/: commit_indexer.rs  mod.rs
scripts/: generate_openapi_clients.sh  tag-and-push-docker-image.sh
server/: Cargo.toml  README.md  config.azure.toml  config.example.toml
server/src/: api.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs
server/src/api/: v1.rs
server/src/api/v1/: data.rs  routes.rs  status.rs
server/tests/: integration.rs
