[workspace]
members = ["core", "crates/api-utils", "crps/azure", "crps/iroh", "server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
azure_core = "0.19"
azure_identity = "0.19"
azure_storage = "0.19"
azure_storage_blobs = "0.19"
bao-tree = "0.15.1"
blake3 = "1.5"
bytes = "1.10.1"
chrono = "0.4"
cid = { version = "0.11", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
env_logger = "0.11"
futures = "0.3"
headers = "0.4"
hex = "0.4"
http-body = "1"
http-body-util = "0.1.3"
iroh = "0.91"
iroh-base = "0.91"
iroh-blobs = "0.93"
itertools = "0.12"
log = "0.4"
multihash = "0.19.3"
multimap = "0.10"
n0-future = "0.2.0"
octocrab = "0.44"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
tabled = "0.15"
time = { version = "0.3.21", features = ["serde-well-known"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
