[package]
name = "cid-router"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-utils = { path = "../crates/api-utils" }
cid-filter = { path = "../crates/cid-filter" }
routes = { path = "../crates/routes" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
iroh-base = { workspace = true }
iroh-blobs = { workspace = true }
iroh = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_jcs = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
