[package]
name = "cid-router-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-utils = { path = "../crates/api-utils" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bao-tree.workspace = true
bytes.workspace = true
chrono.workspace = true
cid.workspace = true
clap.workspace = true
dirs-next.workspace = true
env_logger.workspace = true
futures.workspace = true
iroh.workspace = true
iroh-base.workspace = true
iroh-blobs.workspace = true
log.workspace = true
multihash.workspace = true
n0-future.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
