[package]
name = "cid-router-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-utils = { path = "../crates/api-utils" }
cid-router-core = { path = "../core" }
crp-azure = { path = "../crps/azure" }
crp-iroh = { path = "../crps/iroh" }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bao-tree.workspace = true
bytes.workspace = true
chrono.workspace = true
cid.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
headers.workspace = true
http-body.workspace = true
http-body-util.workspace = true
iroh.workspace = true
iroh-base.workspace = true
iroh-blobs.workspace = true
log.workspace = true
n0-future.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
