[package]
name = "crp-azure"
version = "0.1.0"
edition = "2024"

[dependencies]
cid-router-core = { path = "../../core" }
crp-iroh = { path = "../iroh" }

anyhow.workspace = true
async-trait.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_storage.workspace = true
azure_storage_blobs.workspace = true
blake3.workspace = true
bytes.workspace = true
cid.workspace = true
futures.workspace = true
hex.workspace = true
iroh-blobs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true
tokio.workspace = true
