[package]
name = "crp-iroh"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow.workspace = true
async-trait.workspace = true
bao-tree.workspace = true
bytes.workspace = true
cid.workspace = true
cid-router-core = { path = "../../core" }
futures.workspace = true
iroh.workspace = true
iroh-base.workspace = true
iroh-blobs.workspace = true
iroh-tickets.workspace = true
n0-future.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
