[package]
name = "azure-blob-storage-crp"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-utils = { path = "../../crates/api-utils" }
cid-filter = { path = "../../crates/cid-filter" }
routes = { path = "../../crates/routes" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh-base = { workspace = true }
iroh-bytes = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
multimap = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
