[package]
name = "github-crp"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-utils = { path = "../../crates/api-utils" }
cid-filter = { path = "../../crates/cid-filter" }
routes = { path = "../../crates/routes" }
anyhow = { workspace = true }
axum = { workspace = true }
cid = { workspace = true }
chrono ={ workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
octocrab = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio ={ workspace = true }
toml = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }